Partner Onboarding/objects/Planned_Onboarding_Tasks__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <label>Assigned To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Planned_Onboarding_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Computed_Status__c</fullName>
        <formula>IF(
  today() &gt; Task_Due_Date__c &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Completed&apos;)), 
  &quot;Overdue&quot;,
  IF(
    Task_Due_Date__c == today() &amp;&amp; NOT(ISPICKVAL(Status__c, &apos;Completed&apos;)), 
    &quot;Due&quot;,
    TEXT(Status__c)
  )
)</formula>
        <label>Computed Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_in_Days__c</fullName>
        <label>Duration (in Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_Number__c</fullName>
        <label>Predecessor Task Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seq__c</fullName>
        <label>Seq #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Due_Date__c</fullName>
        <formula>IF(
  ISBLANK(Assigned_To__r.Onboarding_Start_Date__c), 
  DATEVALUE (Assigned_To__r.CreatedDate), 
  Assigned_To__r.Onboarding_Start_Date__c
) +  TemplateTask__r.Duration_in_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TemplateTask__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template Task</label>
        <referenceTo>Onboarding_Tasks__c</referenceTo>
        <relationshipName>Planned_Onboarding_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Step_Image__c</fullName>
        <formula>TemplateTask__r.Image_Name__c</formula>
        <label>Template Step Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Contact Onboarding Task</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Task#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Onboarding Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>